<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PokeDroid</string>
    <string name="action_settings">Settings</string>
    <string name="error">Erorrs occurred</string>
    <string name="gps_off">GPS is off</string>

    <!-- Splash -->

    <string name="splash_loading">Creating the world&#8230;</string>

    <!-- Activity menu -->
    <string name="title_activity_menu_">Menu</string>
    <string name="zaino">Backpack</string>
    <string name="pokemon">Pokemon</string>
    <string name="exchange">Exchange</string>
    <string name="explore">Explore</string>
    <string name="pcdibill">Bill\'s PC</string>
    <string name="title_activity_view_team_activity">View team</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sprite_">Sprite_Activity</string>
    <string name="title_dialog_set_home">Do you want to set this as your home?</string>
    <string name="title_dialog_choose_set_home">In order to perform some actions in the game you\'ll need to set an home</string>
    <string name="menu_reset_home">Change my home location</string>
    <string name="title_dialog_reset_home_err">Can\'t set a new home location</string>
    <string name="title_dialog_reset_home_msg">You have to wait at least a day </string>
    <string name="toast_set_home">It\'ll be set in the next exploration</string>

    <!-- Augmented Reality Activity -->
    <string name="pokemon_too_far">The pokemon is too far, please get closer</string>

    <!-- Dialogs -->
    <string name="choose_pokemon_title">Fight one:</string>
    <string name="not_enough_accuracy_title">Weak signal</string>
    <string name="not_enough_accuracy">We are sorry, we can\'t be more precise on your location, 
        please try again later.</string>
    <string name="time_finished_title">No signal</string>
    <string name="time_finished_msg">We are sorry, our Jinxes can\'t locate you.</string>
    <string name="locating_progress_title">Where are you?</string>
    <string name="locating_progress_msg">Our Jynxes are trying to locate you &#8230;</string>
    <string name="capture">Catch it!</string>

    <!-- Dialog poke stat viewver -->
    <string name="title_dialog_viewstatpoke">Pokemon Stats</string>
    <string name="hp">hp</string>
    <string name="att">Attack</string>
    <string name="def">Defense</string>
    <string name="spatt">S. Attack</string>
    <string name="spdef">S. Defense</string>
    <string name="speed">Speed</string>

    <!-- Dialog confirm pokemon -->
    <string name="title_confirm">Confirm</string>
    <string name="dialog_sure">Are you sure?</string>

    <!-- BluetoothChat -->
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- View team activity -->
    <string name="pokemon_exchange">Exchange</string>
    <string name="pokemon_stats">Stats</string>
    <string name="pokemon_free">Free</string>
    <string name="team_menu_box">View Out Monster</string>
    <string name="team_menu_team">View Team </string>
    <string name="progress_msg_box">Calling all your monsters outside&#8230;</string>
    <string name="not_at_home">You\'re not at home</string>
    <string name="no_exchange_from_box">You can\'t exchange outside monster</string>
    <string name="bye_bye">Bye-bye %1$s !</string>

    <!-- ExchangeActivity -->
    <string name="pokemon_level">lvl. %1$s</string>
    <string name="would_exchange">Would you like to exchange?</string>
    <string name="wait_answer">Wait the other answer&#8230;</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices&#8230;</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="choose_a_pokemon">Choose your first friend!</string>
    <string name="choose_side">Pick a side!</string>

</resources>