<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Menu_Activity" >

    <LinearLayout
    android:id="@+id/menu_row1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:padding="6dp"
    android:weightSum="2">

	    <Button
	        android:id="@+id/buttonCollect"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent" 
	        android:text="@string/zaino"
	        android:paddingLeft="8dp"
	        android:paddingRight="8dp"
	        android:layout_weight="1" />

	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:paddingLeft="8dp"
	        android:paddingRight="8dp"
	        android:text="@string/pokemon" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_alignBottom="@+id/menu_row1"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal"
	    android:padding="6dp"
	    android:weightSum="2" >

	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:paddingLeft="8dp"
	        android:paddingRight="8dp"
	        android:text="@string/pcdibill" />
	</LinearLayout>

</RelativeLayout>
